# HowManyBloodyPhotons

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.github_actions.txt  setup.py
.github/: release.yml
.github/workflows/: publish_pypi.yml  replaceholder.yml  tests.yml
hmbp/: __init__.py  main.py  version.py
hmbp/tests/: test_main.py
