[project]
name = "HowManyPhotons"
version = "0.4.0a0"
description = "Simple photon count utility for astronomical fluxes"
license = {text = "GPL-3.0-or-later"}
authors = [
    {name = "Kieran Leschinski", email = "kieran.leschinski@univie.ac.at"}
]
maintainers = [
    {name = "Kieran Leschinski", email = "kieran.leschinski@univie.ac.at"},
    {name = "Fabian Haberhauer", email = "fabian.haberhauer@univie.ac.at"},
]
readme = "README.md"
keywords = [ "astronomy" ]
dynamic = [ "classifiers" ]
requires-python = ">=3.10,<3.14"
dependencies = [
    "numpy (>=2.2.6,<2.5.0)",
    "astropy (>=6.1.7,<8.0.0)",
    "pyyaml (>=6.0.3,<7.0.0)",
    "synphot (>=1.5.0,<2.0.0)",

    "skycalc-ipy (>=0.6.0,<1.0)",
    "scopesim (>=0.11.1,<1.0)",
]

[project.urls]
Repository = "https://github.com/AstarVienna/HowManyBloodyPhotons"
Changelog = "https://github.com/AstarVienna/HowManyBloodyPhotons/releases"


[tool.poetry]
classifiers = [
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Astronomy",
]
packages = [{include = "hmbp"}]

[tool.poetry.group.test.dependencies]
pytest = "^9.0.2"
pytest-cov = "^7.0.0"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = "--strict-markers"
markers = [
    "webtest: marks tests as requiring network (deselect with '-m \"not webtest\"')",
]
filterwarnings = [
    "error",
    # Seem to come from skycalc_ipy, should fix there...
    "default:'ph/s/m2/micron/arcsec2':astropy.units.core.UnitsWarning",
    "default:'1':astropy.units.core.UnitsWarning",
    "ignore::ResourceWarning",
]

[tool.coverage.report]
omit = ["hmbp/tests/*"]
